--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -2,5 +2,5 @@
 :queues:
   - default
   - subscription_create
-  - subscription_update
-  - subscription_delete
+  - subscription_cancel
+  - invoice_payment_succeeded
