--- a/config/database.yml
+++ b/config/database.yml
@@ -57,6 +57,7 @@ development:
 test:
   <<: *default
   database: stripe_task_test
+  DATABASE_URL: "postgres://postgres:postgres@db:5432/stripe_task_test"
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
